@@ -1,26 +1,20 @@
 package com.nhl.bootique.run;
 
-import java.util.Collection;
-import java.util.Set;
-
 import com.google.inject.Inject;
-import com.nhl.bootique.annotation.DefaultCommand;
 import com.nhl.bootique.cli.Cli;
 import com.nhl.bootique.command.Command;
+import com.nhl.bootique.command.CommandManager;
 import com.nhl.bootique.command.CommandOutcome;
 
 public class DefaultRunner implements Runner {
 
 	private Cli cli;
-	private Collection<Command> commands;
-	private Command defaultCommand;
+	private CommandManager commandManager;
 
-	// TODO: inject commands as map by name
 	@Inject
-	public DefaultRunner(Cli cli, Set<Command> commands, @DefaultCommand Command defaultCommand) {
+	public DefaultRunner(Cli cli, CommandManager commandManager) {
 		this.cli = cli;
-		this.commands = commands;
-		this.defaultCommand = defaultCommand;
+		this.commandManager = commandManager;
 	}
 
 	@Override
@@ -28,21 +22,8 @@ public class DefaultRunner implements Runner {
 		return getCommand().run(cli);
 	}
 
-	// TODO: inject commands as map by name
 	private Command getCommand() {
-		if (cli.commandName() == null) {
-			return defaultCommand;
-		}
-
-		// TODO: inject commands as map by name. This will ensure uniqueness and
-		// easy lookup
-		for (Command c : commands) {
-			if (cli.commandName().equals(c.getMetadata().getName())) {
-				return c;
-			}
-		}
-
-		return defaultCommand;
+		return commandManager.getCommand(cli.commandName());
 	}
 
 }
