@@ -3,6 +3,7 @@
 #17 Wrap CLI Options API to avoid direct dependency on JOpt lib in commands
 #18 Separate a concept of DI-bound option from Command
 #19 Command dispatch mechanism based on Cli state
+#20 Allow configuration of available commands in main()
 #21 Move contribution API into static methods on BQCoreModule
 
 0.11:
